--- a/client/main.html
+++ b/client/main.html
@@ -1,14 +1,15 @@
 <head>
   <title>sample-project</title>
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=&libraries=geometry,drawing"></script>
+  <script
+    type="text/javascript"
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfp8JXX-cuLF_QOs0mGDkPFKnx4OlK6Po&libraries=geometry,drawing"
+  ></script>
 </head>
 
 <body>
   <h1>Welcome to Meteor!</h1>
 
-  {{> hello}}
-  {{> info}}
-  {{> map}}
+  {{> hello}} {{> info}} {{> map}}
 </body>
 
 <template name="hello">
@@ -19,13 +20,17 @@
 <template name="info">
   <h2>Learn Meteor!</h2>
   <ul>
-    <li><a href="https://www.meteor.com/try" target="_blank">Do the Tutorial</a></li>
-    <li><a href="http://guide.meteor.com" target="_blank">Follow the Guide</a></li>
+    <li>
+      <a href="https://www.meteor.com/try" target="_blank">Do the Tutorial</a>
+    </li>
+    <li>
+      <a href="http://guide.meteor.com" target="_blank">Follow the Guide</a>
+    </li>
     <li><a href="https://docs.meteor.com" target="_blank">Read the Docs</a></li>
     <li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>
   </ul>
 </template>
 
 <template name="map">
-  <div id="map" style="width: 400px; height: 400px;"></div>
+  <div id="map" style="width: 400px; height: 400px"></div>
 </template>
