--- a/client/main.html
+++ b/client/main.html
@@ -2,7 +2,7 @@
   <title>sample-project</title>
   <script
     type="text/javascript"
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfp8JXX-cuLF_QOs0mGDkPFKnx4OlK6Po&libraries=geometry,drawing"
+    src="https://maps.googleapis.com/maps/api/js?key=&libraries=geometry,drawing"
   ></script>
 </head>
 
